test/types/records/recursive/recursive-in-other.good
recursive-in-other.chpl:7: error: record 'B' cannot contain a recursive field 'b' of type 'B'
