test/types/records/recursive/recursive-in-other.chpl

record A {
  var b : B;
}

record B {
  var b : B;
}

var a = new A();
